[package]
name = "goup"
description = "Like rustup or nvm but for Go: A simple version manager for Go written in Rust! 🚀"
version = "1.3.0"
edition = "2021"
authors = ["Ringo Hoffmann <contact@zekro.de>"]
license = "MIT"
repository = "https://github.com/zekroTJA/goup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.5", features = ["derive"] }
console = "0.15.5"
directories = "5.0.1"
flate2 = "1.0.26"
nom = "7.1.3"
reqwest = { version = "0.11.17", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.162", features = ["derive"] }
tar = "0.4.38"
tempfile = "3.5.0"
thiserror = "1.0.44"
whattheshell = "1.0.0"
zip = { version = "0.6.5", default-features = false, features = ["deflate"] }
